# chrelyonly_ssh_client_rust

./: Cargo.toml
config/: servers.json
data/: command_history.json  connection_history.json
src/: main.rs
src/audit/: log.rs
src/config/: mod.rs  paths.rs  preferences.rs  server.rs  storage.rs  sync.rs
src/history/: history.rs
src/security/: secrets.rs
src/ssh/: client.rs  connect.rs  mod.rs  sftp.rs
src/ui/: app.rs  window.rs
